// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render properly 1`] = `
<div
  className="pagination-panel"
>
  <div
    className="pagination-panel-left"
  >
    <button
      className="paginator"
      disabled={true}
      name="firstPage"
      onClick={[Function]}
    >
      ≪
    </button>
    <button
      className="paginator"
      disabled={true}
      name="prevPage"
      onClick={[Function]}
    >
      &lt;
    </button>
    <ul
      className="pagination"
    >
      <li
        className="pagination-page active"
        key="1"
        onClick={[Function]}
      >
        1
      </li>
      <li
        className="pagination-page"
        key="2"
        onClick={[Function]}
      >
        2
      </li>
      <li
        className="pagination-page"
        key="3"
        onClick={[Function]}
      >
        3
      </li>
      <li
        className="pagination-page"
        key="4"
        onClick={[Function]}
      >
        4
      </li>
      <li
        className="pagination-page"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        className="pagination-page"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        className="pagination-page"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        className="pagination-page"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        className="pagination-page"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        className="pagination-page"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
    </ul>
    <button
      className="paginator"
      disabled={false}
      name="nextPage"
      onClick={[Function]}
    >
      &gt;
    </button>
    <button
      className="paginator"
      disabled={false}
      name="lastPage"
      onClick={[Function]}
    >
      ≫
    </button>
    <PaginationSizeSelector
      onPageSizeChanged={[Function]}
      pageSize={10}
    />
  </div>
  <div
    className="pagination-panel-right"
  >
    <div>
      <PaginationSummary
        current_page={1}
        first_page={1}
        first_result={0}
        has_next_page={true}
        has_previous_page={false}
        last_page={10}
        last_result={9}
        next_page={2}
        pages={10}
        previous_page={0}
        results={10}
        total_pages={100}
        total_results={1000}
      />
    </div>
    <div
      className="refresh"
      onClick={[Function]}
    >
      ↺
    </div>
  </div>
</div>
`;

exports[`Pagination should render properly for page 10 1`] = `
<div
  className="pagination-panel"
>
  <div
    className="pagination-panel-left"
  >
    <button
      className="paginator"
      disabled={false}
      name="firstPage"
      onClick={[Function]}
    >
      ≪
    </button>
    <button
      className="paginator"
      disabled={false}
      name="prevPage"
      onClick={[Function]}
    >
      &lt;
    </button>
    <ul
      className="pagination"
    >
      <li
        className="pagination-page"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        className="pagination-page"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        className="pagination-page"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        className="pagination-page"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        className="pagination-page"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        className="pagination-page active"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
      <li
        className="pagination-page"
        key="11"
        onClick={[Function]}
      >
        11
      </li>
      <li
        className="pagination-page"
        key="12"
        onClick={[Function]}
      >
        12
      </li>
      <li
        className="pagination-page"
        key="13"
        onClick={[Function]}
      >
        13
      </li>
      <li
        className="pagination-page"
        key="14"
        onClick={[Function]}
      >
        14
      </li>
    </ul>
    <button
      className="paginator"
      disabled={false}
      name="nextPage"
      onClick={[Function]}
    >
      &gt;
    </button>
    <button
      className="paginator"
      disabled={false}
      name="lastPage"
      onClick={[Function]}
    >
      ≫
    </button>
    <PaginationSizeSelector
      onPageSizeChanged={[Function]}
      pageSize={10}
    />
  </div>
  <div
    className="pagination-panel-right"
  >
    <div>
      <PaginationSummary
        current_page={10}
        first_page={5}
        first_result={90}
        has_next_page={true}
        has_previous_page={true}
        last_page={14}
        last_result={99}
        next_page={11}
        pages={10}
        previous_page={9}
        results={10}
        total_pages={100}
        total_results={1000}
      />
    </div>
    <div
      className="refresh"
      onClick={[Function]}
    >
      ↺
    </div>
  </div>
</div>
`;

exports[`Pagination should render without page size 1`] = `
<div
  className="pagination-panel"
>
  <div
    className="pagination-panel-left"
  >
    <button
      className="paginator"
      disabled={false}
      name="firstPage"
      onClick={[Function]}
    >
      ≪
    </button>
    <button
      className="paginator"
      disabled={false}
      name="prevPage"
      onClick={[Function]}
    >
      &lt;
    </button>
    <ul
      className="pagination"
    >
      <li
        className="pagination-page"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        className="pagination-page"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        className="pagination-page"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        className="pagination-page"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        className="pagination-page"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        className="pagination-page active"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
      <li
        className="pagination-page"
        key="11"
        onClick={[Function]}
      >
        11
      </li>
      <li
        className="pagination-page"
        key="12"
        onClick={[Function]}
      >
        12
      </li>
      <li
        className="pagination-page"
        key="13"
        onClick={[Function]}
      >
        13
      </li>
      <li
        className="pagination-page"
        key="14"
        onClick={[Function]}
      >
        14
      </li>
    </ul>
    <button
      className="paginator"
      disabled={false}
      name="nextPage"
      onClick={[Function]}
    >
      &gt;
    </button>
    <button
      className="paginator"
      disabled={false}
      name="lastPage"
      onClick={[Function]}
    >
      ≫
    </button>
  </div>
  <div
    className="pagination-panel-right"
  >
    <div>
      <PaginationSummary
        current_page={10}
        first_page={5}
        first_result={90}
        has_next_page={true}
        has_previous_page={true}
        last_page={14}
        last_result={99}
        next_page={11}
        pages={10}
        previous_page={9}
        results={10}
        total_pages={100}
        total_results={1000}
      />
    </div>
    <div
      className="refresh"
      onClick={[Function]}
    >
      ↺
    </div>
  </div>
</div>
`;

exports[`Pagination should render without page summary 1`] = `
<div
  className="pagination-panel"
>
  <div
    className="pagination-panel-left"
  >
    <button
      className="paginator"
      disabled={false}
      name="firstPage"
      onClick={[Function]}
    >
      ≪
    </button>
    <button
      className="paginator"
      disabled={false}
      name="prevPage"
      onClick={[Function]}
    >
      &lt;
    </button>
    <ul
      className="pagination"
    >
      <li
        className="pagination-page"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        className="pagination-page"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        className="pagination-page"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        className="pagination-page"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        className="pagination-page"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        className="pagination-page active"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
      <li
        className="pagination-page"
        key="11"
        onClick={[Function]}
      >
        11
      </li>
      <li
        className="pagination-page"
        key="12"
        onClick={[Function]}
      >
        12
      </li>
      <li
        className="pagination-page"
        key="13"
        onClick={[Function]}
      >
        13
      </li>
      <li
        className="pagination-page"
        key="14"
        onClick={[Function]}
      >
        14
      </li>
    </ul>
    <button
      className="paginator"
      disabled={false}
      name="nextPage"
      onClick={[Function]}
    >
      &gt;
    </button>
    <button
      className="paginator"
      disabled={false}
      name="lastPage"
      onClick={[Function]}
    >
      ≫
    </button>
    <PaginationSizeSelector
      onPageSizeChanged={[Function]}
      pageSize={10}
    />
  </div>
  <div
    className="pagination-panel-right"
  >
    <div
      className="refresh"
      onClick={[Function]}
    >
      ↺
    </div>
  </div>
</div>
`;

exports[`Pagination should render without refresh button 1`] = `
<div
  className="pagination-panel"
>
  <div
    className="pagination-panel-left"
  >
    <button
      className="paginator"
      disabled={false}
      name="firstPage"
      onClick={[Function]}
    >
      ≪
    </button>
    <button
      className="paginator"
      disabled={false}
      name="prevPage"
      onClick={[Function]}
    >
      &lt;
    </button>
    <ul
      className="pagination"
    >
      <li
        className="pagination-page"
        key="5"
        onClick={[Function]}
      >
        5
      </li>
      <li
        className="pagination-page"
        key="6"
        onClick={[Function]}
      >
        6
      </li>
      <li
        className="pagination-page"
        key="7"
        onClick={[Function]}
      >
        7
      </li>
      <li
        className="pagination-page"
        key="8"
        onClick={[Function]}
      >
        8
      </li>
      <li
        className="pagination-page"
        key="9"
        onClick={[Function]}
      >
        9
      </li>
      <li
        className="pagination-page active"
        key="10"
        onClick={[Function]}
      >
        10
      </li>
      <li
        className="pagination-page"
        key="11"
        onClick={[Function]}
      >
        11
      </li>
      <li
        className="pagination-page"
        key="12"
        onClick={[Function]}
      >
        12
      </li>
      <li
        className="pagination-page"
        key="13"
        onClick={[Function]}
      >
        13
      </li>
      <li
        className="pagination-page"
        key="14"
        onClick={[Function]}
      >
        14
      </li>
    </ul>
    <button
      className="paginator"
      disabled={false}
      name="nextPage"
      onClick={[Function]}
    >
      &gt;
    </button>
    <button
      className="paginator"
      disabled={false}
      name="lastPage"
      onClick={[Function]}
    >
      ≫
    </button>
    <PaginationSizeSelector
      onPageSizeChanged={[Function]}
      pageSize={10}
    />
  </div>
  <div
    className="pagination-panel-right"
  >
    <div>
      <PaginationSummary
        current_page={10}
        first_page={5}
        first_result={90}
        has_next_page={true}
        has_previous_page={true}
        last_page={14}
        last_result={99}
        next_page={11}
        pages={10}
        previous_page={9}
        results={10}
        total_pages={100}
        total_results={1000}
      />
    </div>
  </div>
</div>
`;
